# routes/index.js
@@ -10,6 +10,7 @@ router.get("/", (req, res) => {
 router.use("/contacts", ensureAuthenticated, require("./contacts"))
 router.use("/transactions", ensureAuthenticated, require("./transactions"))
 router.use("/accounts", ensureAuthenticated, require("./accounts"))
+router.use("/users", require("./users"))
 
 router.use((req, res) => {
     res.status(404).json({ message: "Route on found" })
